--- a/about.html
+++ b/about.html
@@ -13,10 +13,6 @@
 
     html, body {
       height: 100%;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
       font-family: Arial, sans-serif;
       color: white;
       background: url('cig wallpaper.jpg') no-repeat center center fixed;
@@ -32,15 +28,13 @@
     }
 
     .main-content {
-      flex: 1 0 auto;
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 40px;
+      justify-content: flex-start;
       width: 100%;
+      position: relative;
     }
 
     .bg-fade {
@@ -75,6 +69,7 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      width: 100%;
     }
 
     .nav-links {
@@ -105,36 +100,30 @@
       padding-right: 20px;
     }
 
-    .spacer {
-      height: 40px;
-    }
-
-    .hero-section, .scroll-section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      margin: 0 auto 40px auto;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
-      opacity: 1;
-      transition: opacity 0.8s ease, transform 0.8s ease;
+    .section {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
       width: 100%;
       max-width: 900px;
-      min-height: 100vh;
-      box-sizing: border-box;
-    }
-
-    .scroll-section.section-hidden {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+      transition: opacity 0.8s ease, transform 0.8s ease;
       opacity: 0;
-      transform: translateY(50px);
       pointer-events: none;
-      min-height: auto;
     }
 
-    .scroll-section h2 {
+    .section.active {
+      opacity: 1;
+      pointer-events: auto;
+      position: relative;
+      transform: translateX(-50%) translateY(0);
+    }
+
+    .section h2 {
       margin: 30px 0 10px;
     }
 
@@ -145,12 +134,13 @@
       text-align: center;
       width: 100%;
       flex-shrink: 0;
+      position: relative;
+      z-index: 1;
     }
   </style>
 </head>
 
 <body>
-  <!-- Background transition layer -->
   <div class="bg-fade" id="fadeBg"></div>
 
   <header>
@@ -171,10 +161,8 @@
     </div>
   </nav>
 
-  <div class="main-content">
-    <div class="spacer"></div>
-
-    <section class="hero-section" id="heroSection">
+  <div class="main-content" style="height: 200vh;"> <!-- Scrollable height -->
+    <section class="section active" id="heroSection">
       <h2>Premium Quality, Timeless Tradition</h2>
       <p>
         At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
@@ -189,7 +177,7 @@
       </p>
     </section>
 
-    <section class="scroll-section section-hidden" id="ourStory">
+    <section class="section" id="ourStory">
       <h2>Our Story</h2>
       <p>
         GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
@@ -222,16 +210,18 @@
 
     window.addEventListener("scroll", () => {
       const scrollY = window.scrollY;
-      const triggerPoint = ourStory.offsetTop - window.innerHeight / 2;
+      const triggerPoint = window.innerHeight / 2;
 
+      // Fade logic
       if (scrollY > triggerPoint) {
-        heroSection.classList.add("section-hidden");
-        ourStory.classList.remove("section-hidden");
+        heroSection.classList.remove("active");
+        ourStory.classList.add("active");
       } else {
-        heroSection.classList.remove("section-hidden");
-        ourStory.classList.add("section-hidden");
+        heroSection.classList.add("active");
+        ourStory.classList.remove("active");
       }
 
+      // Background change logic
       const scrollTrigger = window.innerHeight * 0.7;
       fadeBg.classList.toggle("active", scrollY > scrollTrigger);
     });
