--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
-   <a href="cart.html">cart</a>   
+<a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
     
     </div>
     <div class="nav-right">
