--- a/feedback.html
+++ b/feedback.html
@@ -154,7 +154,7 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
-      <a href="cart.html">Cart</a>
+    <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
     </div>
     <div class="nav-right">
       🛒 Cart: <span id="cart-count">0</span>
