--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
         bgVideo.classList.add('active');
         bgImages.classList.add('hidden');
         premiumSection.classList.add('hidden');
-      } else {
+      }
+ else {
         bgVideo.classList.remove('active');
         bgImages.classList.remove('hidden');
         premiumSection.classList.remove('hidden');
