--- a/about.html
+++ b/about.html
@@ -137,6 +137,46 @@
       position: relative;
       z-index: 1;
     }
+
+    /* Staggered fade-up animation */
+    @keyframes fadeUp {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .section.active > * {
+      opacity: 0;
+      transform: translateY(20px);
+      animation-fill-mode: forwards;
+      animation-name: fadeUp;
+      animation-duration: 0.6s;
+      animation-timing-function: ease-out;
+    }
+
+    .section.active > *:nth-child(1) {
+      animation-delay: 0.1s;
+    }
+    .section.active > *:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+    .section.active > *:nth-child(3) {
+      animation-delay: 0.5s;
+    }
+    .section.active > *:nth-child(4) {
+      animation-delay: 0.7s;
+    }
+    .section.active > *:nth-child(5) {
+      animation-delay: 0.9s;
+    }
+    .section.active > *:nth-child(6) {
+      animation-delay: 1.1s;
+    }
   </style>
 </head>
 
@@ -154,9 +194,8 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
-   <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
+      <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
     </div>
-    
   </nav>
 
   <div class="main-content" style="height: 200vh;"> <!-- Scrollable height -->
