--- a/product.html
+++ b/product.html
@@ -157,11 +157,9 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
-      <a href="cart.html">Cart</a>
-    </div>
-    <div style="color: white; font-weight: bold; margin-left: auto; padding-right: 20px;">
-      🛒 Cart: <span id="cart-count">0</span>
-    </div>
+      <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>    
+</div>
+    
   </nav>
 
   <main>
