--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       font-weight: bold;
       text-align: center;
       position: relative;
-      z-index: 3;
+      z-index: 2;
     }
 
     nav {
       background: black;
       padding: 15px 20px;
       text-align: center;
-      z-index: 3;
+      z-index: 2;
       position: relative;
     }
 
@@ -85,15 +85,12 @@
       color: black;
     }
 
-    #backgroundImages {
+    .background-container {
       display: flex;
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 120px); /* Adjusted to be below header and nav */
       transition: opacity 1s ease-in-out;
-      z-index: 0;
-      position: fixed;
-      top: 120px; /* Push down below header + nav */
-      left: 0;
+      margin-top: 120px; /* Shifted below header + nav */
     }
 
     .bg-image {
@@ -129,9 +126,28 @@
       pointer-events: auto;
     }
 
+    #videoMessage {
+      position: fixed;
+      top: 30%;
+      width: 100%;
+      text-align: center;
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+      z-index: 1;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 1s ease-in-out;
+    }
+
+    #videoMessage.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
     main {
       position: absolute;
-      top: 55%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background: rgba(0, 0, 0, 0.6);
@@ -176,16 +192,17 @@
         text-align: center;
       }
 
-      #backgroundImages {
+      .background-container {
         flex-direction: column;
+        height: auto;
       }
 
       .bg-image {
-        height: 33.3vh;
+        height: 50vh;
       }
 
       main {
-        top: 45%;
+        top: 40%;
       }
     }
   </style>
@@ -212,19 +229,20 @@
     </div>
   </nav>
 
-  <!-- Background images container -->
-  <div id="backgroundImages">
+  <div id="backgroundImages" class="background-container">
     <div class="bg-image bg1"></div>
     <div class="bg-image bg2"></div>
     <div class="bg-image bg3"></div>
   </div>
 
-  <!-- Background video -->
   <video id="bgVideo" class="bg-video" autoplay muted loop playsinline>
     <source src="smoking b roll.mov" type="video/mp4" />
   </video>
 
-  <!-- Main content -->
+  <div id="videoMessage">
+    <h2>Explore our wide variety of nicotine products – vapes, pouches, lighters, and more.</h2>
+  </div>
+
   <main id="premiumSection">
     <h2>EXPERIENCE PREMIUM QUALITY</h2>
     <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
@@ -238,22 +256,22 @@
     const bgVideo = document.getElementById('bgVideo');
     const bgImages = document.getElementById('backgroundImages');
     const premiumSection = document.getElementById('premiumSection');
+    const videoMessage = document.getElementById('videoMessage');
 
     window.addEventListener('scroll', () => {
       if (window.scrollY > 100) {
-        // Scroll down: show video, hide images + main
         bgVideo.classList.add('active');
         bgImages.classList.add('hidden');
         premiumSection.classList.add('hidden');
+        videoMessage.classList.add('active');
       } else {
-        // Scroll up: show images + main, hide video
         bgVideo.classList.remove('active');
         bgImages.classList.remove('hidden');
         premiumSection.classList.remove('hidden');
+        videoMessage.classList.remove('active');
       }
     });
   </script>
 
 </body>
 </html>
-
